--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="site-header">
-      <h1>{{ site.title }}</h1>
+      <h1><a href="/">{{ site.title }}</a></h1>
       <p>{{ site.description }}</p>
     </div>
     <div class="site-content">
