--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <div class="site-header">
       <h1><a href="/">{{ site.title }}</a></h1>
       <p>{{ site.description }}</p>
+      {% include navigation.html %}
     </div>
     <div class="site-content">
       {{ content }}
