--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
   }
   
   a {
-    color: #007acc;
+    color: #60a5fa;
     text-decoration: none;
   }
   
@@ -54,7 +54,7 @@ body {
   }
   
   .site-nav a {
-    color: #333;
+    color: #60a5fa;
     text-decoration: none;
   }
   
