--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
 <nav class="site-nav">
-  <a href="/blog">BLOG</a> | <a href="/publications">PUBLICATIONS</a> | <a href="#">RESUME</a> | <a href="https://github.com/username">GITHUB</a>
+  <a href="/blog">BLOG</a> | <a href="/publications">PUBLICATIONS</a> | <a href="#">RESUME</a> | <a href="https://github.com/georgevenven">GITHUB</a>
 </nav> 
